# snippetpilot

./: AGENTS.md  README.md  SKILL.md  mcp-config.example.json  pyproject.toml
.github/: copilot-setup-steps.yml
.github/workflows/: quality.yml
src/snippetpilot/: __init__.py  __main__.py  db.py  server.py
tests/: conftest.py  test_tools.py
